# DeSPiste

./: README.md  pyproject.toml
despiste/: __main__.py  commands.py  compile.py  decompile.py  instruction.py  instruction_context.py  output.asm  program.py  utils.py
tests/: test_command_conversions.py  test_instructions.py  test_program.py  test_special_commands.py  tests.py
tests/resources/: cmpnm.asm  loop_primitive.asm  test1.dsp  udiv-clean.asm  udiv.asm
