[tool.poetry]
name = "DeSPiste"
version = "0.1.0"
description = "Compiler / Decompiler for the Sega Saturn SCU DSP"
authors = ["enTropy"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
